--- a/src/html/siscaer/componentes/cabecalho/cabecalho.html
+++ b/src/html/siscaer/componentes/cabecalho/cabecalho.html
@@ -4,7 +4,7 @@
 <header class="br-header mb-4" id="header" data-sticky="data-sticky" style="position: sticky; display: block;">
     <div class="container-lg">
       <div class="header-top">
-        <div class="header-logo"><img src="../img/pflogo.png" alt="logo"/>
+        <div class="header-logo"><img src="../../img/govbr" alt="logo"/>
           <!-- <span class="br-divider vertical"></span> -->
           <!-- <div class="header-sign">Assinatura</div>-->
         </div>
@@ -18,11 +18,11 @@
               <div class="header">
                 <div class="title">Acesso Rápido</div>
               </div>
-              <a class="br-item" href="javascript:void(0)">Link de acesso 1</a>
+             <!-- <a class="br-item" href="javascript:void(0)">Link de acesso 1</a>
               <a class="br-item" href="javascript:void(0)">Link de acesso 2</a>
               <a class="br-item" href="https://portaldatransparencia.gov.br/">Portal da Transparência</a>
-              <a class="br-item" href="javascript:void(0)">Documentos úteis</a>
-            </div>
+              <a class="br-item" href="javascript:void(0)">Documentos úteis</a> -->
+            </div> 
           </div><span class="br-divider vertical mx-half mx-sm-1"></span>
           <div class="header-functions dropdown">
             <button class="br-button circle small" type="button" data-toggle="dropdown" aria-label="Abrir Funcionalidades do Sistema"><i class="fas fa-th" aria-hidden="true"></i>
