Arrumando caminho relativo

--- a/src/html/siscaer/componentes/cabecalho/cabecalho.html
+++ b/src/html/siscaer/componentes/cabecalho/cabecalho.html
@@ -4,7 +4,7 @@
 <header class="br-header mb-4" id="header" data-sticky="data-sticky" style="position: sticky; display: block;">
     <div class="container-lg">
       <div class="header-top">
-        <div class="header-logo"><img src="../../img/govbr" alt="logo"/>
+        <div class="header-logo"><img src="./img/govbr" alt="logo"/>
           <!-- <span class="br-divider vertical"></span> -->
           <!-- <div class="header-sign">Assinatura</div>-->
         </div>
