--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -14,7 +14,7 @@
     <!-- Font Rawline-->
     <link
       rel="stylesheet"
-      href="./bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
+      href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
 
     <!-- Font Raleway-->
     <link
@@ -26,7 +26,7 @@
 
     <!--- Design próprio CSS -->
     <!-- <link rel="stylesheet" href="./css/design.css" /> -->
-    <link rel="stylesheet" href="../siscaer/css/design.css" />
+    <link rel="stylesheet" href="./css/design.css" />
 
     <!--- Ícones Font Awesome - Versão 6.5.1 -->
     <link rel="stylesheet" href="./icones/css/fontawesome.css" />
