Criando mais componentes - crenciamento - dados pessoais - endereço e contato

--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -9,6 +9,7 @@
 
     <script src="./componentes/cabecalho/cabecalho.js" type="module"></script>
     <script src="./componentes/rodape/rodape.js" type="module"></script>
+    <script src="./componentes/dados_pessoais/dados_pessoais.js" type="module"></script>
 
 
     <!-- Font Rawline-->
@@ -54,6 +55,8 @@
           </div>
         </div>
       </div>
+
+      <br-dados_pessoais></br-dados_pessoais>
 
       <div id="container">
         <div class="tab-buttons">
@@ -138,6 +141,9 @@
       </div>
     </div>
   </div>
+
+    
+
     <br-rodape></br-rodape>
 
     
