--- a/src/html/siscaer/componentes/rodape/rodape.html
+++ b/src/html/siscaer/componentes/rodape/rodape.html
@@ -1,8 +1,8 @@
 
 
-<footer class="br-footer">
+<!--<footer class="br-footer">
     <div class="container-lg">
-      <div class="logo"><img src="../../img/govbr" alt="Imagem"/></div>
+      <div class="logo"><img src="../img/govbr" alt="Imagem"/></div>
       <div class="br-list horizontal" data-toggle="data-toggle" data-sub="data-sub">
         <div class="col-2"><a class="br-item header" href="javascript:void(0)">
             <div class="content text-down-01 text-bold text-uppercase">A Receita Federal do Brasil</div>
@@ -108,7 +108,7 @@
           </div>
           <div class="col assigns text-right">
            <!-- <img class="ml-4" src="/img/Labin-logo.png" alt="Imagem"/>
-            <img class="ml-4" src="/img/MFAssinatura.png" alt="Imagem"/> -->
+            <img class="ml-4" src="/img/MFAssinatura.png" alt="Imagem"/> --
           </div>
         </div>
       </div>
@@ -116,6 +116,15 @@
     <div class="container-lg">
       <div class="info">
         <div class="text-down-01 text-medium pb-3">Texto destinado a exibição de informações relacionadas à&nbsp;<strong>licença de uso.</strong></div>
+      </div>
+    </div>
+  </footer> -->
+  
+  <footer class="br-footer pt-3" id="footer">
+    <div class="container-lg">
+      <div class="info">
+        <div class="text-down-01 text-medium pb-3">Texto destinado a exibição de informações relacionadas à&nbsp;<strong><a href="">licença de uso</a>.</strong></div>
+          
       </div>
     </div>
   </footer>
