Atualização to do list

--- a/src/html/gendec/componentes/dados_aeronave/dados_aeronave.html
+++ b/src/html/gendec/componentes/dados_aeronave/dados_aeronave.html
@@ -24,7 +24,7 @@
       <div class="column">
         <div class="form-group">
           <label for="hora-partida">Horário da partida (Previsão)</label>
-          <input type="time" class="form-control" id="hora-partida" placeholder="Hora prevista">
+          <input type="time" class="form-control p-1" id="hora-partida" placeholder="Hora prevista">
         </div>
         <div class="form-group">
           <label for="nacionalidade e cadastro">Marcas de nacionalidade e cadastro</label>
@@ -34,7 +34,7 @@
       <div class="column">
         <div class="form-group">
           <label for="hora-chegada">Horário da chegada (Previsão)</label>
-          <input type="time" class="form-control" id="hora-chegada" placeholder="Hora prevista">
+          <input type="time" class="form-control p-1" id="hora-chegada" placeholder="Hora prevista">
         </div>  
       </div>
   </div>
