--- a/src/html/gendec/componentes/declaracao_saude/declaracao_saude.html
+++ b/src/html/gendec/componentes/declaracao_saude/declaracao_saude.html
@@ -1,25 +1,48 @@
 <fieldset id="tab-5" class="fieldset-border">
   <legend class="legend-border">Declaração de saúde</legend>
-  <div class="two-columns">
-      <div class="column">
-        <div class="form-group">
-          <label for="name">Nome</label>
-          <input type="text" class="form-control" id="name" placeholder="Insira seu nome">
-        </div>
-        <div class="form-group">
-          <label for="name">Sobrenome</label>
-          <input type="text" class="form-control" id="surname" placeholder="Insira seu sobrenome">
-        </div>
-      </div>
-      <div class="column">
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail">
-        </div>  
-        <div class="form-group">
-          <label for="pwd">Telefone</label>
-          <input type="number" class="form-control" id="pwd" placeholder="Insira seu número de telefone">
-        </div>
-      </div>
+  <div>
+    Pessoas a bordo que sofrem de doenças que não sejam
+
+enjôo aéreo ou efeitos de acidentes, bem como os casos de
+
+doença desembarcada durante o voo:
+
+
+<div class="checkbox">
+  <label><input type="checkbox"> Não</label>
+</div> 
+
+<br>
+
+Qualquer outra condição a bordo que possa levar à propagação de
+
+doença:
+
+<div class="checkbox">
+  <label><input type="checkbox"> Não</label>
+</div>
+
+<br>
+
+Detalhes de cada desinsetização ou tratamento sanitário (local, data,
+
+tempo, método) durante o voo. <br>
+
+Se nenhuma desinsetização tiver sido realizados durante o voo fornecem detalhes dos mais recentes
+
+desinsetização:
+
+<div class="checkbox">
+  <label><input type="checkbox"> Não</label>
+</div>
+
+<br>
+
+Assinado, se necessário (membro da tripulação envolvido):
+
+<div class="checkbox">
+  <label><input type="checkbox"> Não</label>
+</div>
+
   </div>
 </fieldset> 
