--- a/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
@@ -4,25 +4,28 @@
       <div class="column">
         <div class="form-group">
           <label for="nome-solicitante">Nome completo</label>
-          <input type="text" class="form-control" id="nome-solicitante" placeholder="Insira seu nome completo">
+          <input type="text" class="form-control" id="nome-solicitante" placeholder="Insira seu nome completo" required>
         </div>
         <div class="form-group">
           <label for="cpf-solicitante">CPF</label>
-          <input type="number" class="form-control" id="cpf-solicitante" placeholder="Insira seu CPF">
+          <input type="number" class="form-control" id="cpf-solicitante" placeholder="Insira seu CPF" required>
         </div>
       </div>
       <div class="column">
         <div class="form-group">
           <label for="email-solicitante">Email</label>
-          <input type="email" class="form-control" id="email-solicitante" placeholder="Insira seu e-mail">
+          <input type="email" class="form-control" id="email-solicitante" placeholder="Insira seu e-mail" required>
         </div>  
         <div class="form-group">
           <label for="telefone-solicitante">Telefone</label>
-          <input type="number" class="form-control" id="telefone-solicitante" placeholder="Insira seu número de telefone">
+          <div class="tooltip">
+            <span class="tooltiptext">Incluir texto de ajuda</span>
+            <span class="icon">
+              <i class="fa fa-circle-info" aria-hidden="true"></i>
+            </span>
+          </div>
+          <input type="number" class="form-control" id="telefone-solicitante" placeholder="Insira seu número de telefone" required>
         </div>
       </div>
-  </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
   </div>
 </fieldset>
