--- a/src/html/gendec/componentes/dados_tripulacao/dados_tripulacao.html
+++ b/src/html/gendec/componentes/dados_tripulacao/dados_tripulacao.html
@@ -35,5 +35,16 @@
     </div>
   </template>
   <div id="lista_tripulantes"></div>
-  <a href="#" id="adicionar_tripulante">Adicionar</a>
+  <a class="menu-item divider" href="#" id="adicionar_tripulante" role="treeitem">
+    <span class="icon" style="color: #071D41; justify-content: right;">
+      <i class="fa fa-square-plus" aria-hidden="true"></i>
+    </span>
+    <span class="content"></span>
+  </a>
+  <a class="menu-item divider" href="#" id="remover_tripulante" role="treeitem">
+    <span class="icon" style="color: #071D41; justify-content: right;">
+      <i class="fa fa-square-minus" aria-hidden="true"></i>
+    </span>
+    <span class="content"></span>
+  </a>
 </fieldset>
