Substituindo tooltip por popover

--- a/src/html/gendec/gendec.html
+++ b/src/html/gendec/gendec.html
@@ -73,6 +73,8 @@
     <script src="./componentes/dados_tripulacao/dados_tripulacao.js" type="module"></script>
     <script src="./componentes/dados_passageiros/dados_passageiros.js" type="module"></script>
     <script src="./componentes/declaracao_saude/declaracao_saude.js" type="module"></script>
+    <script src="./js/popover.js" type="module"></script>
+    <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
 
   </body>
 </html>
