--- a/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
@@ -18,6 +18,22 @@
         </div>  
         <div class="form-group">
           <label for="telefone-solicitante">Telefone</label>
+          <div class="mb-3">
+            <span class="icon">
+              <i class="fa fa-circle-info" aria-hidden="true"></i>
+            </span>
+            <div class="br-tooltip" popover success>
+              <div class="popover-header">
+                <span class="text">Cadastro Concluído!</span>
+              </div>
+              <div class="popover-body">
+                <span class="subtext">Para verificar mais detalhes a respeito do seu acesso, clique no link abaixo.</span>
+              </div>
+              <div class="popover-footer">
+                <a class="link" href="javascript:void(0);">Clique aqui</a>
+              </div>
+            </div>
+          </div>
           <div class="tooltip">
             <span class="tooltiptext">Incluir texto de ajuda</span>
             <span class="icon">
