siscaer mexendo no js

--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -192,6 +192,21 @@
               </div>  
             </div>
 
+            <!--<div id="nacionalizacao">
+                <label for="nacionalizacao">Brasileiro Naturalizado</label>
+                <input type="checkbox" id="nacionalizacao">
+                <span class="content"></span>
+            </div> -->
+
+            <div class="form-group">
+              <label for ="naturalizado" id="naturalizado">Brasileiro Naturalizado</label>
+              <div class="col-sm-10">
+                  <div class="form-check">
+                      <input class="form-check-input" id="naturalizado" type="checkbox" name="brasileiro naturalizado" value="1">
+                  </div>
+              </div>
+            </div>
+
             <div class="column">
               <div class="form-group">
                 <label for="documento">Documento de Identidicação:</label><br>
