--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -164,6 +164,7 @@
     <script src="./componentes/dados_pessoais/dados_pessoais.js" type="module"></script>
     <script src="./componentes/endereco_contato/endereco_contato.js" type="module"></script>
     <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
   </body>
