Pasta de testes / Dados do form -> Design System + Responsividade

--- a/src/html/gendec/componentes/dados_aeronave/dados_aeronave.html
+++ b/src/html/gendec/componentes/dados_aeronave/dados_aeronave.html
@@ -1,5 +1,9 @@
 <fieldset id="tab-2" class="fieldset-border">
-  <legend class="legend-border">Dados da aeronave</legend>
+  <legend class="legend-border" style="color: #155BCB; justify-content: right;">
+    <span class="icon" style="color: #155BCB; justify-content: right;">
+      <i class="fa fa-plane" aria-hidden="true"></i>
+    </span>Dados da aeronave
+  </legend>
   <div class="two-columns">
       <div class="column">
         <div class="form-group">
