--- a/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
@@ -1,5 +1,9 @@
 <fieldset id="tab-1" class="fieldset-border">
-  <legend class="legend-border">Dados do operador</legend>
+  <legend class="legend-border" style="color: #155BCB; justify-content: right;">
+    <span class="icon" style="color: #155BCB; justify-content: right;">
+      <i class="fa fa-building-user" aria-hidden="true"></i>
+    </span>Dados do operador
+  </legend>
   <div class="two-columns">
       <div class="column">
         <div class="form-group">
