--- a/src/html/gendec/componentes/declaracao_saude/declaracao_saude.html
+++ b/src/html/gendec/componentes/declaracao_saude/declaracao_saude.html
@@ -1,5 +1,9 @@
 <fieldset id="tab-5" class="fieldset-border">
-  <legend class="legend-border">Declaração de saúde</legend>
+  <legend class="legend-border" style="color: #155BCB; justify-content: right;">
+    <span class="icon" style="color: #155BCB; justify-content: right;">
+      <i class="fa fa-file-medical" aria-hidden="true"></i>
+    </span>Declaração de saúde
+  </legend>
   <div>
     Pessoas a bordo que sofrem de doenças que não sejam
 
