--- a/src/html/gendec/componentes/dados_passageiros/dados_passageiros.html
+++ b/src/html/gendec/componentes/dados_passageiros/dados_passageiros.html
@@ -1,5 +1,9 @@
 <fieldset id="passageiros" class="fieldset-border">
-  <legend class="legend-border">Passageiros</legend>
+  <legend class="legend-border" style="color: #155BCB; justify-content: right;">
+    <span class="icon" style="color: #155BCB; justify-content: right;">
+      <i class="fa fa-id-card" aria-hidden="true"></i>
+    </span>Passageiros
+  </legend>
   <template id="passageiro">
     <div class="two-columns">
       <div class="column">
@@ -31,16 +35,20 @@
   </div>
   </template>
   <div id="lista_passageiros"></div>
-  <a class="menu-item divider" href="#" id="adicionar_passageiro" role="treeitem">
-    <span class="icon" style="color: #071D41; justify-content: right;">
-      <i class="fa fa-square-plus" aria-hidden="true"></i>
-    </span>
-    <span class="content"></span>
-  </a>
-  <a class="menu-item divider" href="#" id="remover_passageiro" role="treeitem">
-    <span class="icon" style="color: #071D41; justify-content: right;">
-      <i class="fa fa-square-minus" aria-hidden="true"></i>
-    </span>
-    <span class="content"></span>
-  </a>
+  <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+    <div class="menu-item divider" href="#" id="adicionar_passageiro" role="treeitem">
+      <span class="icon" style="justify-content: right; border: none;">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </span>
+      <span class="content"></span>
+    </div>
+  </button>
+  <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+    <div class="menu-item divider" href="#" id="remover_passageiro" role="treeitem">
+      <span class="icon" style="justify-content: right;">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </span>
+      <span class="content"></span>
+    </div>
+  </button>
 </fieldset>
