--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -37,6 +37,7 @@
 
   <body>
     <div class="template-base">
+      <div class="grid-container">
 
       
       <br-cabecalho></br-cabecalho>
@@ -149,6 +150,7 @@
   </div> 
 
     <br-rodape></br-rodape>
+  </div>
 
     <nav class="back-to-top active" aria-label="Voltar ao topo da página">
       <a href="#wrapper">
