--- a/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/gendec/componentes/dados_pessoais/dados_pessoais.html
@@ -4,48 +4,43 @@
       <i class="fa fa-building-user" aria-hidden="true"></i>
     </span>Dados do operador
   </legend>
-  <div class="two-columns">
-      <div class="column">
-        <div class="form-group">
-          <label for="nome-solicitante">Nome completo</label>
-          <input type="text" class="form-control" id="nome-solicitante" placeholder="Insira seu nome completo" required>
-        </div>
-        <div class="form-group">
-          <label for="cpf-solicitante">CPF</label>
-          <input type="number" class="form-control" id="cpf-solicitante" placeholder="Insira seu CPF" required>
-        </div>
-      </div>
-      <div class="column">
-        <div class="form-group">
-          <label for="email-solicitante">Email</label>
-          <input type="email" class="form-control" id="email-solicitante" placeholder="Insira seu e-mail" required>
-        </div>  
-        <div class="form-group">
-          <label for="telefone-solicitante">Telefone</label>
-          <div class="mb-3">
-            <span class="icon">
-              <i class="fa fa-circle-info" aria-hidden="true"></i>
-            </span>
-            <div class="br-tooltip" popover success>
-              <div class="popover-header">
-                <span class="text">Cadastro Concluído!</span>
-              </div>
-              <div class="popover-body">
-                <span class="subtext">Para verificar mais detalhes a respeito do seu acesso, clique no link abaixo.</span>
-              </div>
-              <div class="popover-footer">
-                <a class="link" href="javascript:void(0);">Clique aqui</a>
-              </div>
+  <div class="row mt-5">
+    <div class="col-sm">
+      <fieldset>
+        <!--<legend>Nome Completo (Legend)</legend>-->
+        <div class="row">
+          <div class="col-md-10 mb-3">
+            <div class="br-input"><label for="nome-solicitante">Nome completo</label>
+            <input id="nome-solicitante" placeholder="Insira seu nome completo" type="text" />
             </div>
           </div>
-          <div class="tooltip">
-            <span class="tooltiptext">Incluir texto de ajuda</span>
-            <span class="icon">
-              <i class="fa fa-circle-info" aria-hidden="true"></i>
-            </span>
+          <div class="col-md-10">
+            <div class="br-input">
+              <label for="cpf-solicitante">CPF</label>
+              <input id="cpf-solicitante" type="text" placeholder="Insira seu CPF"/>
+            </div>
           </div>
-          <input type="number" class="form-control" id="telefone-solicitante" placeholder="Insira seu número de telefone" required>
         </div>
-      </div>
+      </fieldset>
+    </div>
+    <div class="col-sm">
+      <fieldset>
+        <!--<legend>Outros Dados (Legend)</legend>-->
+        <div class="row">
+          <div class="col-md-10 mb-3">
+            <div class="br-input">
+              <label for="email-solicitante">E-mail</label>
+              <input id="email-solicitante" type="text" placeholder="Insira seu e-mail"/>
+            </div>
+          </div>
+          <div class="col-md-10">
+            <div class="br-input">
+              <label for="telefone-solicitante">Telefone</label>
+              <input id="telefone-solicitante" type="phone" placeholder="Insira seu número"/>
+            </div>
+          </div>
+        </div>
+      </fieldset>
+    </div>
   </div>
 </fieldset>
