--- a/src/html/siscaer/componentes/credenciamento/credenciamento.html
+++ b/src/html/siscaer/componentes/credenciamento/credenciamento.html
@@ -1,6 +1,10 @@
 <div class="container-xl">
     <fieldset id="credenciamento" class="fieldset-border">
-    <legend class="legend-border">Credenciamento</legend>
+      <legend class="legend-border" style="color: #337ab7; justify-content: right;">
+        <span class="icon" style="color: #337ab7; justify-content: right;">
+          <i class="fa fa-address-card " aria-hidden="true"></i>
+        </span>Credenciamento
+      </legend>
 
     <div class="row mt-5">
         <div class="col-sm">
