--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -1,6 +1,10 @@
 <div class="container-xl">
   <fieldset id="dados-pessoais" class="fieldset-border">
-      <legend class="legend-border">Dados Pessoais</legend>
+    <legend class="legend-border" style="color: #337ab7; justify-content: right;">
+      <span class="icon" style="color: #337ab7; justify-content: right;">
+        <i class="fa fa-user" aria-hidden="true"></i>
+      </span>Dados Pessoais
+    </legend>
       
       <div class="row mt-5">
         <div class="col-sm">
@@ -8,8 +12,8 @@
             <!--<legend>Nome Completo (Legend)</legend>-->
             <div class="row">
               <div class="col-md-10 mb-3">
-                <div class="br-input"><label for="nome">Nome completo: </label>
-                <input id="nome" placeholder="Insira seu nome completo" type="text" required/>
+                <div class="br-input"><label for="nome-solicitante">Nome completo: </label>
+                <input id="nome-solicitante" placeholder="Insira seu nome completo" type="text" required/>
                 </div>
               </div>
               <div class="col-md-10 mb-3">
